Optimize ProcessStarter with ChatGPT